--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -54,7 +54,7 @@
                                                 'type': 'text',
                                                 'args': {
                                                     'value': '/form/' ~ item.address,
-                                                    'placeholder': 'contact-form',
+                                                    'readonly': true
                                                 }
                                             } %}
                                         </td>
