add search time zone

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -124,7 +124,8 @@
                                                     'name': 'common[timezone]',
                                                     'args': {
                                                         'option': timezone,
-                                                        'selected': 'Europe/Kiev'
+                                                        'selected': 'Europe/Kiev',
+                                                        'data': {'search': 'true'},
                                                     }
                                                 } %}
 
